# evtbin

./: .gitattributes  CMakeLists.txt  ChangeLog  SConscript  azure-pipelines.yml  evtbinLib.py
cmt/: requirements
data/: ChanEnergyBin.fits  LatBinnedTemplate  LatCountCubeTemplate  LatCountMapTemplate  LatEnergyBinDef.tpl  LatHealpixTemplate  LatLightCurveTemplate  LatSingleBinnedTemplate  LatTimeBinDef.tpl  ft1filelist  ft1small.fits  ft1tiny.fits  ft1tiny0.fits  ft1tiny1.fits  ft1tiny2.fits  ft2filelist  ft2small.fits  ft2tiny.fits  ft2tiny0.fits  ft2tiny1.fits  gbmtiny.fits
data/outref/: CM2.fits  GBMLC1.lc  GBMPHA1.pha  LC1.lc  PHA1.pha  PHA2.pha  merged_spectrum.pha  separate_spectrum.pha  test.ccube
doc/: release.notes
evtbin/: BayesianBinner.h  BinConfig.h  Binner.h  CountCube.h  CountMap.h  DataProduct.h  Gti.h  HealpixBinner.h  HealpixMap.h  Hist.h  Hist1D.h  Hist2D.h  LightCurve.h  LinearBinner.h  LogBinner.h  MultiSpec.h  OrderedBinner.h  SingleSpec.h  TipBinner.h  TipBinner2D.h  TipEqualLinearBinner.h  TipEqualLogBinner.h
pfiles/: evtbin.par  gtbin.par  gtbindef.par  test_evtbin.par
src/: BayesianBinner.cxx  BinConfig.cxx  ConstSnBinner.cxx  CountCube.cxx  CountMap.cxx  DataProduct.cxx  GlastGbmBinConfig.cxx  GlastGbmBinConfig.h  GlastLatBinConfig.cxx  GlastLatBinConfig.h  Gti.cxx  HealpixBinner.cxx  HealpixMap.cxx  Hist1D.cxx  Hist2D.cxx  Hist3D.cxx  LightCurve.cxx  LinearBinner.cxx  LogBinner.cxx  MultiSpec.cxx  SingleSpec.cxx  TipBinner.cxx  TipBinner2D.cxx  TipEqualLinearBinner.cxx  TipEqualLogBinner.cxx  mainpage.h
src/evtbin/: evtbin.cxx
src/gtbin/: gtbin.cxx
src/gtbindef/: gtbindef.cxx
src/test/: test_evtbin.cxx
